# nosy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
assets/: system.hbs  user.hbs
src/: auxiliary.rs  cli_command.rs  extractor.rs  fetcher.rs  file_type.rs  llm.rs  main.rs  message.rs  scheme.rs  validate.rs
src/auxiliary/: completion.rs  download_whisper.rs
src/extractor/: html.rs  pandoc.rs  pdf.rs  whisper.rs
src/fetcher/: http.rs
